--- a/Katalon/This is to play with/settings/internal/com.kms.katalon.execution.properties
+++ b/Katalon/This is to play with/settings/internal/com.kms.katalon.execution.properties
@@ -1,6 +1,34 @@
-#Mon Oct 07 15:27:19 CAT 2019
+#Tue Nov 05 11:42:21 CAT 2019
 execution.default.executionConfiguration="Firefox"
 execution.default.timeout=30
 execution.default.openReportAfterExecuting=false
 execution.default.quitDriversAfterExecutingTestCase=false
 execution.default.quitDriversAfterExecutingTestSuite=true
+execution.default.smartWaitMode=true
+execution.logTestSteps=true
+show-Profiles=true
+show-Test\ Cases=true
+show-Object\ Repository=true
+show-Test\ Suites=true
+show-Data\ Files=true
+show-Keywords=true
+show-Test\ Listeners=true
+show-Include=true
+show-Plugins=true
+report.takeScreenshotOption=true
+report.videoRecorderOption="{\\n  \\"enable\\"\: true,\\n  \\"videoFormat\\"\: \\"AVI\\",\\n  \\"videoQuality\\"\: \\"HIGH\\",\\n  \\"allowedRecordIfFailed\\"\: true,\\n  \\"allowedRecordIfPassed\\"\: true\\n}"
+mailConfig.encryptionEnabled=false
+mailConfig.host="smtp.gmail.com"
+mailConfig.port="465"
+mailConfig.username="raymond.kriel@gmail.com"
+mailConfig.password="Carnivora"
+mailConfig.securityProtocol="TLS"
+mailConfig.attachment=false
+mailConfig.subject="Katalon Summary Report"
+mailConfig.cc=""
+mailConfig.bcc=""
+mailConfig.useUsernameAsSender=true
+mailConfig.sender="raymond.kriel@gmail.com"
+mailConfig.reportRecipients="raymondk@spsi.co.za"
+mailConfig.reportFormat="[\\n  \\"CSV\\",\\n  \\"HTML\\"\\n]"
+mailConfig.sendReportTestFailedOnly=false
